# taipei-land-dev-engine

./: .gitignore  CLAUDE.md  README_land_dev_taipei_v1_v2.md
.claude/: settings.local.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: evaluate.py  projects.py
backend/app/data_sources/: base.py  mock_zone.py
backend/app/rule_engine/: base.py  building_line.py  building_mass.py  building_permit.py  conclusion.py  far_bcr.py  far_bonus.py  far_transfer.py  fire_safety.py  odd_lot.py  overlays.py  parking.py  pipeline.py  site_normalizer.py  traffic.py  urban_renewal.py  zoning.py
backend/app/schemas/: enums.py  evidence.py  input.py  output.py
backend/app/versioning/: law_registry.py
backend/tests/: test_api.py  test_parking.py  test_pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Checklist19.tsx  ChecklistDetailCards.tsx  EvidenceTable.tsx  OverlayRiskList.tsx  ReportSummary.tsx  ResultCard.tsx  SiteInputForm.tsx  StatusBadge.tsx
frontend/src/hooks/: useEvaluate.ts
frontend/src/pages/: EvaluatePage.tsx  ResultPage.tsx
frontend/src/types/: index.ts
